--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,3 +3,6 @@ base="dark"
 primaryColor="#1cbc55"
 backgroundColor="#000101"
 secondaryBackgroundColor="#121313"
+
+[client]
+showErrorDetails = false
