--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,10 @@
 # IGNORE FOLDERS
 /configs/
 /models/
-# /__pycache__/
+/__pycache__/
 
 # IGNORE FILES
 test.ipynb
 test.py
+test.html
 .cache
-
-5_Emotion_based_Recommendation.ipynb
-6_Estimating_weights_for_moods.ipynb
